--- a/prodo-child/style.css
+++ b/prodo-child/style.css
@@ -26,10 +26,6 @@ X. Site Wide
 
 
 /* X. Site Wide */
-.field textarea,
-.field input {
-  border-color: #6BB0DC;
-}
 .img-responsive {
 	width: 100%;
 }
@@ -59,13 +55,33 @@ hr {
 
 
 /* 2.  Navbar Edits */
-body .navbar.floating.navbar-fixed-top {
-	padding-top: 20px;
+body .navbar.two {
+	padding: 10px 0;
 }
-body .navbar {
-	padding-top: 20px;	
+body .navbar.two .navbar-brand {
+	padding-top: 3px;
 }
-
+body .navbar.two .navbar-nav > li {
+	margin: 5px 0;
+}
+body .navbar.two .social {
+	padding: 5px 0;
+}
+body .navbar.two .navbar-toggle {
+	margin-top: 6px;
+	margin-bottom: 6px;
+}
+body .navbar.two .navbar-collapse.collapse.in, 
+body .navbar.two .navbar-collapse.collapsing {
+	margin-top: 10px;
+}
+@media (max-width: 767px) {
+/*
+	body .navbar.floating.navbar-fixed-top {
+		padding-top: 15px;
+	}
+*/
+}
 
 
 
@@ -74,20 +90,21 @@ body .navbar {
 h1.animate.complete {
 	display:none;
 }
-#crisis-2 {
+#current-state {
 	padding-top: 30px;
 }
-#crisis-2 .devastation {
+#current-state .devastation {
 	padding: 30px 0 20px;
 	margin: 0 auto;
 /* 	width: 80%; */
 }
-#crisis-2 .deforestation-stats {
+#current-state .deforestation-stats {
 	padding-top: 20px;
 	width: 96%;
+	margin: 0 auto;
 }
-#crisis-2 .devastation img,
-#crisis-2 .deforestation-stats img {
+#current-state .devastation img,
+#current-state .deforestation-stats img {
 	border-radius: 3px;
 /* 	box-shadow: -4px 0px 21px black; */
 	box-shadow: 0 1px 2px 0 rgba(0,0,0,0.1),0 4px 8px 0 rgba(0,0,0,0.2);
@@ -107,7 +124,8 @@ h1.animate.complete {
 	font-size: 27px;
 	font-size: 47px;
 	font-weight: bold;
-	text-shadow: 0px 1px 3px gray;
+	text-shadow: 0 0 5px #fff;
+	line-height: 1;
 }
 
 
@@ -116,11 +134,7 @@ h1.animate.complete {
 /* 4.  Solution section */
 #solution {
 	padding-top:30px;
-}
-#solution .solutionLine {
-	padding-top: 0;
-	position: relative;
-	bottom: -60px;
+	padding-bottom: 0;
 }
 #solution .solution-img-container img {
 	border-radius: 3px;
@@ -134,6 +148,14 @@ h1.animate.complete {
 }
 #solution .services [class*=col]:hover i.fa {
 	color: #2185c5;
+}
+#solution .solutionLine {
+/*
+	padding-top: 0;
+	position: relative;
+	bottom: -60px;
+*/
+	margin-top: 60px;
 }
 
 
@@ -152,12 +174,13 @@ h1.animate.complete {
 #getting-started .timeline .oneStep:before {
 	content: '';
 	box-shadow: 0 1px 2px 0 rgba(0,0,0,0.1),0 4px 8px 0 rgba(0,0,0,0.2);
-	position: absolute;
-	left: 146px;
+	position: relative;
+	left: 131px;
 	top: 50px;
 	width: 98px;
 	height: 2px;
 	background: #6BB0DC;
+	display: block;
 }
 #getting-started .timeline .lastStep:before {
 	content: initial;
@@ -175,11 +198,12 @@ h1.animate.complete {
 	margin: 0 auto;
 	transition: all 0.15s ease-in;
 	box-shadow: 0 1px 2px 0 rgba(0,0,0,0.1),0 4px 8px 0 rgba(0,0,0,0.2);
+	text-transform: uppercase;
 }
 #getting-started .timeline .oneStep:hover div.step {
 	border-color:#2185c5;
 	border-width: 5px;
-	line-height: 87px;
+	line-height: 88px;
 }
 #getting-started .timeline .oneStep div.desc {	
 	text-align: center;
@@ -189,7 +213,7 @@ h1.animate.complete {
 	font-size: 24px;
 	text-align: center;
 	display: block;
-	width: 140px;
+	width: 97%;
 	margin: 0 auto;
 }
 #getting-started .timeline .oneStep div.desc a.btn {	
@@ -198,12 +222,15 @@ h1.animate.complete {
 #getting-started  hr.gettingStartedLine {
 	margin-top: 90px;
 }
-@media (max-width: 767px) {
+@media (max-width: 767px) and (orientation: portrait)  {
+	#getting-started .timeline .oneStep div.desc {
+		width: 35%;
+	}
 	#getting-started .timeline .oneStep {
 		display: flex;
 	}
 	#getting-started .timeline .oneStep:before {
-		left: 128px;
+		left: 110px;
 		top: 98px;
 		width: 2px;
 		height: 52px;
@@ -222,7 +249,20 @@ h1.animate.complete {
 		box-shadow: 0 1px 2px 0 rgba(0,0,0,0.1),0 4px 8px 0 rgba(0,0,0,0.2);
 	}
 }
-
+@media (max-width: 767px) and (orientation: landscape) {
+	#getting-started .timeline .oneStep div.desc {
+		width: 35%;
+	}
+	#getting-started .timeline .oneStep {
+		display: flex;
+	}
+	#getting-started .timeline .oneStep:before {
+		left: 197px;
+		top: 98px;
+		width: 2px;
+		height: 23px;
+	}
+}
 
 
 
@@ -244,6 +284,18 @@ h1.animate.complete {
 	padding-top: 0;
 }
 
+/* Rethink Replant Renew */
+#rethink-replant-renew .rethinkReplantRenew {
+	font-size: 50px;
+	font-weight: bold;
+	text-shadow: 0 0 5px #fff;
+}
+#rethink-replant-renew.section.parallax .parallax-overlay.colored, 
+#rethink-replant-renew.section.video .parallax-overlay.colored, 
+#rethink-replant-renew.section.parallax .video-overlay.colored, 
+#rethink-replant-renew.section.video .video-overlay.colored {
+	background-color: rgba( 47, 182, 128, 0.25 );
+}
 
 
 
@@ -252,7 +304,10 @@ h1.animate.complete {
 	padding-top: 30px;
 	overflow: hidden;
 }
-#contact div.col-md-4:first-of-type {
+#contact div.col-md-8 {
+	margin-bottom: 30px;
+}
+#contact div.col-md-4 {
 	top: -190px;
 }
 #contact .twitterContainer {
@@ -269,16 +324,33 @@ h1.animate.complete {
 	border-image-slice: 168 181 194 160;
 	border-image-width: 80px;
 }
+.contact-form .field input[type=email], 
+.contact-form .field input[type=text],
+.contact-form .field textarea {
+	border-color: #eaeaea;
+	border-width: 3px;
+	margin: 0 auto;
+	display: block;
+}
+.contact-form .field input[type=email]:hover, 
+.contact-form .field input[type=text]:hover,
+.contact-form .field textarea:hover {
+	border-color: #6BB0DC;
+}
+.contact-form .field input[type=email]:focus, 
+.contact-form .field input[type=text]:focus,
+.contact-form .field textarea:focus {
+	border-color: #6BB0DC;
+}
 
 /* Responsive */
 @media (max-width: 767px) {
 	#contact .twitterContainer {
 		position: inherit;
-		position: relative;
 		left: -17%;
 		top: 0;
   	}
-	#contact div.col-md-4:first-of-type {
+	#contact div.col-md-4 {
 		top: 0;
 	}
 }
