post-malware update

--- a/prodo-child/style.css
+++ b/prodo-child/style.css
@@ -340,6 +340,9 @@ h1.animate.complete {
 #specs-features .services .offsetTopL {
 	padding-top: 0;
 }
+.services i.fa {
+    color: #46B57D;
+}
 
 /* Rethink Replant Renew */
 #rethink-replant-renew .rethinkReplantRenew {
